project(AdventOfCode2022)

set(CMAKE_CXX_STANDARD 20)

add_executable(day_01_01 day_01_01.cpp)
add_executable(day_01_02 day_01_02.cpp)

add_executable(day_02_01 day_02_01.cpp)
add_executable(day_02_02 day_02_02.cpp)

add_executable(day_03_01 day_03_01.cpp)
add_executable(day_03_02 day_03_02.cpp)