project(AdventOfCode2022)

set(CMAKE_CXX_STANDARD 20)

add_executable(day_01_01 day_01_01.cpp)
add_executable(day_01_02 day_01_02.cpp)

add_executable(day_02_01 day_02_01.cpp)
add_executable(day_02_02 day_02_02.cpp)

add_executable(day_03_01 day_03_01.cpp)
add_executable(day_03_02 day_03_02.cpp)

add_executable(day_04_01 day_04_01.cpp)
add_executable(day_04_02 day_04_02.cpp)

add_executable(day_05_01 day_05_01.cpp)
add_executable(day_05_02 day_05_02.cpp)

add_executable(day_06_01 day_06_01.cpp)
add_executable(day_06_02 day_06_02.cpp)

add_executable(day_07_01 day_07_01.cpp)
add_executable(day_07_02 day_07_02.cpp)

add_executable(day_08_01 day_08_01.cpp)
add_executable(day_08_02 day_08_02.cpp)

add_executable(day_09_01 day_09_01.cpp)
add_executable(day_09_02 day_09_02.cpp)